<resources>
    <string name="app_name">Blood_donor_finder</string>
    <string name="blood_donor">Blood Donors </string>
    <string name="blood_recipient">Blood Recipient </string>
    <string name="user"> Select user </string>
    <string name="donor"> Donor </string>
    <string name="recepient">Recipient </string>
    <string name="individual">Individual </string>
    <string name="hospital"> Hospital </string>
    <string name="bloodbank"> Blood bank </string>
    <string name="register">Register </string>
    <string name="login"> Login </string>
    <string name="email"> Email </string>
    <string name="password"> Password </string>
    <string name="name"> Name </string>
    <string name="phone"> Phone </string>
    <string name="profile_name"> Name: </string>
    <string name="profile_phone"> Phone: </string>
    <string name="profile_rtype"> Recepient type: </string>
    <string name="rtype"> Recepient type</string>
    <string name="A_positive"> A+ </string>
    <string name="A_negative"> A- </string>
    <string name="B_positive"> B+ </string>
    <string name="B_negative"> B- </string>
    <string name="AB_positive"> AB+ </string>
    <string name="AB_negative"> AB- </string>
    <string name="O_positive"> O+ </string>
    <string name="O_negative"> O- </string>
    <string name="HBO"> HBO </string>
    <string name="update"> Update profile </string>
    <string name="name_hint"> abcd </string>
    <string name="phone_hint"> 0712345678 </string>
    <string name="email_hint"> abcd@gmail.com </string>
    <string name="password_hint"> ******** </string>
    <string name="profile"> Profile </string>
    <string name="welcome"> Welcome recepient </string>
    <string name="welcome1"> Welcome donor </string>
    <string name="add_photo"> Add profile photo </string>
    <string name="blood_groups"> Blood groups </string>
    <string name="title_activity_donor_location">Map</string>

</resources>
