<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id= "@+id/activity_donor_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonorProfileActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:background="@drawable/background_gradient"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
        <ImageView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="195dp"
        android:id="@+id/layoutInput"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_white"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:typeface="serif"
            app:fontFamily="serif" />

        <EditText
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_person_outline_black_24dp"
            android:drawableRight="@drawable/ic_person_outline_black_24dp"
            android:drawablePadding="20dp"
            android:hint="@string/name_hint"
            android:textColor="@android:color/black"
            android:typeface="serif" />

        <TextView
            android:id="@+id/phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Phone"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:typeface="serif"
            app:fontFamily="serif" />

        <EditText
            android:id="@+id/profile_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_phone_android_black_24dp"
            android:drawableRight="@drawable/ic_phone_android_black_24dp"
            android:drawablePadding="20dp"
            android:hint="@string/phone_hint"
            android:textColor="@android:color/black"
            android:typeface="serif" />
        <TextView
            android:id="@+id/rtype_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/rtype"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:typeface="serif"
            app:fontFamily="serif" />

        <Spinner
            android:id="@+id/profile_btype"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:drawableEnd="@drawable/ic_lock_outline_black_24dp"
            android:drawableRight="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="20dp"
            android:entries="@array/blood_type"
            android:textColor="@android:color/black"
            android:typeface="serif" />


        <Button
            android:id="@+id/btn_profile_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:background="@drawable/btn_gradient"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:typeface="serif" />
    </LinearLayout>

    <ImageView
        android:id="@+id/profile_img"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_photo_black_24dp"
        android:background="@drawable/background_white"
        android:padding="0dp"
        android:layout_width="120dp"
        android:layout_height="120dp" />

    <TextView
        android:id="@+id/dfinder_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_img"
        android:layout_centerHorizontal="true"
        android:text="@string/add_photo"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:fontFamily="serif" />
</RelativeLayout>