<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id= "@+id/activity_donorlandingpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".donorlandingpage">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:background="@drawable/background_gradient"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
        <ImageView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="155dp"
        android:id="@+id/layoutInput"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_white"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_dprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_gradient"
            android:text="@string/profile"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:typeface="serif" />

        <Button
            android:id="@+id/btn_brecepients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_gradient"
            android:text="@string/blood_recipient"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:typeface="serif" />
    </LinearLayout>

    <ImageView
        android:id="@+id/user_img"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_person_black_24dp"
        android:background="@drawable/background_white"
        android:padding="5dp"
        android:layout_width="70dp"
        android:layout_height="70dp" />

    <TextView
        android:id="@+id/dfinder_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_img"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome1"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:fontFamily="serif" />
</RelativeLayout>